--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -32,3 +32,19 @@ body {
      position: absolute;
      z-index: -1;
 }
+
+img{
+     width: 50%;
+     height: 50%;
+     border: 1px solid #434343;
+}
+
+.contact-info{
+     font-size: 10pt;
+     color: #cccccc;
+}
+
+.project{
+     background-color: gray;
+     margin-left: 20px;
+}
